# MosqiBot

./: .gitignore  README.md
1. Firmware/Mega/config/: protocol.h
1. Firmware/Mega_v2.0/: setup.hpp
1. Firmware/Mega_v2.0/config/: pin.h
1. Firmware/Mega_v2.0/include/: LureDevice.hpp
1.Firmware/Mega/: Mega.ino
1.Firmware/Mega_v2.0/config/: config.h
1.Firmware/Mega_v2.0/include/: Camera.hpp  StepperTask.hpp
1.Firmware/Uno/config/: protocol.h
2. Software/src/communication/: package.xml
2. Software/src/gui/: CMakeLists.txt  main.cpp
2. Software/src/gui/resource/: end_process.sh
2. Software/src/gui/window/: MainWindow.h
2. Software/src/system/api/include/: TrtNet.h  Yolo.h
2. Software/src/system/api/src/: FocusStacking.cpp
2. Software/src/system/include/: Task.h
2. Software/src/system/src/: Task.cpp  client_node.cpp  nodes.cpp
2.Software/src/mosqibot_communication/mosqibot_communication/: mega_node.py
2.Software/src/mosqibot_srv_interface/: package.xml
2.Software/src/mosqibot_srv_interface/srv/: CleanUp.srv
2.Software/src/mosqibot_system/: CMakeLists.txt
2.Software/src/mosqibot_system/api/include/: MacroLog.h  Yolo.h
2.Software/src/mosqibot_system/api/src/: Projecting.cpp
2.Software/src/mosqibot_system/config/settings/: config.yaml
2.Software/src/mosqibot_system/include/: Task.h  nodes.h
2.Software/src/mosqibot_system/src/: Task.cpp
2.Software/src/mosqibot_ui/: package.xml
2.Software/src/mosqibot_ui/include/: RosNode.hpp
2.Software/src/mosqibot_ui/resource/: mosqibot.sh
2.Software/src/mosqibot_ui/window/: MainWindow.cpp
2.Software/src/mosqibot_ui_test/: CMakeLists.txt  package.xml
2.Software/src/mosqibot_ui_test/ui/: MainWindow.ui
Embedded/Mega/: setup.hpp  task.hpp
Embedded/Mega/config/: pin.h
Embedded/Mega/include/: LureDevice.hpp  TalkUno.hpp  VibMotor.hpp
Embedded/Mega_v2.0/: Mega_v2.0.ino
Embedded/Mega_v2.0/config/: params.h  protocol.h
Embedded/Mega_v2.0/include/: VibMotor.hpp
Embedded/Uno/: Uno.ino  task.hpp
Embedded/Uno/config/: config.h  param.h  pin.h
Embedded/Uno/include/: Camera.hpp
Host/log/: latest_build
Host/src/embedded_pkg/: package.xml  setup.cfg  setup.py
Host/src/host_client/: CMakeLists.txt  package.xml
Host/src/host_client/api/: CMakeLists.txt
Host/src/host_client/api/include/: FocusStacking.h  Projecting.h  Yolo.h  parseSetting.h
Host/src/host_client/api/src/: TrtNet.cpp  Yolo.cpp  parseSetting.cpp
Host/src/host_client/config/settings/: config.yaml
Host/src/host_client/include/: Task.h  nodes.h
Host/src/host_client/launch/: mosqibot.launch.py
Host/src/host_client/model/: mosquito_classes.txt
Host/src/host_client/src/: Task.cpp  nodes.cpp
Host/src/mosqibot_communication/: setup.cfg  setup.py
Host/src/mosqibot_srv_interface/: CMakeLists.txt
Host/src/mosqibot_system/: package.xml
Host/src/mosqibot_system/api/: CMakeLists.txt
Host/src/mosqibot_system/api/include/: FocusStacking.h  TrtNet.h
Host/src/mosqibot_system/api/src/: FocusStacking.cpp  Projecting.cpp  Yolo.cpp
Host/src/mosqibot_system/config/settings/: config.yaml
Host/src/mosqibot_system/include/: Task.h  nodes.h
Host/src/mosqibot_system/launch/: mosqibot.launch.py
Host/src/mosqibot_system/src/: Task.cpp
Host/src/mosqibot_ui_test/: CMakeLists.txt
Host/src/mosqibot_ui_test/include/: MainWindow.h
Host/src/mosqibot_ui_test/resources/: images.qrc
Host/src/mosqibot_ui_test/src/: MainWindow.cpp
Host/src/my_interface/: CMakeLists.txt  package.xml
Host/src/qt_ui/: CMakeLists.txt  package.xml
Host/src/qt_ui/ui/: MainWindow.ui
Host/src/qt_ui/window/: MainWindow.cpp
Host/src/qt_ui_test/: CMakeLists.txt
Host/src/qt_ui_test/window/: MainWindow.cpp  MainWindow.h
Matlab/scripts/: DataDistribution.m  LineGraph.m  PiChart.m  Scatter.m
Script/: mosqibot.sh
Shell/: MosqiBotTest.sh  arduino_node.bash  end_process.sh  mosqibot.sh
test/install/: local_setup.sh  setup.sh
test/install/arduino_pkg/lib/arduino_pkg/: mega_node  uno_node
test/install/arduino_pkg/share/arduino_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
test/install/camera_client/lib/camera_client/: camera_client
test/install/camera_client/share/camera_client/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
test/install/camera_client/share/camera_client/param/: camera_info.yaml
test/install/my_interface/include/my_interface/my_interface/srv/: mega_msg.hpp
test/install/my_interface/include/my_interface/my_interface/srv/detail/: clean_up__builder.hpp  clean_up__functions.c  clean_up__functions.h  clean_up__rosidl_typesupport_fastrtps_c.h  clean_up__rosidl_typesupport_fastrtps_cpp.hpp  clean_up__rosidl_typesupport_introspection_c.h  clean_up__rosidl_typesupport_introspection_cpp.hpp  clean_up__struct.hpp  clean_up__traits.hpp  clean_up__type_support.c  clean_up__type_support.h  mega_msg__builder.hpp  mega_msg__functions.h  mega_msg__rosidl_typesupport_fastrtps_c.h  mega_msg__rosidl_typesupport_fastrtps_cpp.hpp  mega_msg__rosidl_typesupport_introspection_c.h  mega_msg__struct.hpp  mega_msg__type_support.c  mega_msg__type_support.cpp  uno_msg__functions.c  uno_msg__functions.h  uno_msg__rosidl_typesupport_introspection_c.h  uno_msg__rosidl_typesupport_introspection_cpp.hpp  uno_msg__struct.h  uno_msg__struct.hpp  uno_msg__traits.hpp  uno_msg__type_support.c
test/install/my_interface/share/my_interface/: local_setup.sh  package.bash  package.sh  package.zsh
test/install/my_interface/share/my_interface/cmake/: rosidl_cmake-extras.cmake
test/install/my_interface/share/my_interface/srv/: CleanUp.idl  CleanUp_Response.msg  UnoMsg.srv  UnoMsg_Request.msg  UnoMsg_Response.msg
test/install/test_vibration/lib/test_vibration/: test_vibration
test/install/test_vibration/share/test_vibration/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
test/install/test_vibration/share/test_vibration/launch/: mosqibot.launch.py
(+6 files in other folders)
